--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
     max-width: 800px;
     width: 100%;
     padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 h2, .white {
@@ -52,6 +55,9 @@ a {
 /* Section 2 */
 .section-2 {
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .section-2 h2 {
