--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
-    background-color: #101214;
-    color: #7A7C80;
+    background-color: #fff;
+    color: #000;  /* Change the default text color to black */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,11 +23,11 @@ body {
 }
 
 h2, .white {
-    color: #fff;
+    color: #000;  /* Change the color of h2 and white class text to black */
 }
 
 a {
-    color: #7A7C80;
+    color: #000;  /* Change link color to black */
     text-decoration: none;
 }
 
@@ -82,13 +82,13 @@ a {
 /* Animations / utilities */
 .section-2 a:hover {
     font-size: 1.3rem;
-    color: #fff;
+    color: #555;  /* Slightly lighter color on hover */
     cursor: pointer;
     transition: 0.2s;
 }
 
 .section-1 a:hover {
-    color: #fff;
+    color: #555;  /* Slightly lighter color on hover */
     cursor: pointer;
     transition: 0.3s;
 }
